# ridge

./: ChangeLog  DESCRIPTION  MD5  NAMESPACE  cleanup  configure  configure.ac
R/: coef.ridgeLinear.R  coef.ridgeLogistic.R  computeRidgeLogistic.R  linearRidge.R  linearRidgeGenotypes.R  linearRidgeGenotypesPredict.R  logisticRidge.R  logisticRidgeGenotypes.R  logisticRidgeGenotypesPredict.R  plot.ridgeLinear.R  plot.ridgeLogistic.R  summary.ridgeLinear.R  summary.ridgeLogistic.R  vcov.ridgeLinear.R
man/: GenBin.Rd  GenCont.Rd  Gorman.Rd  Hald.Rd  coef.ridgeLinear.Rd  coef.ridgeLogistic.Rd  linearRidge.Rd  linearRidgeGenotypes.Rd  linearRidgeGenotypesPredict.Rd  logisticRidge.Rd  logisticRidgeGenotypes.Rd  logisticRidgeGenotypesPredict.Rd  plot.ridgeLinear.Rd  plot.ridgeLogistic.Rd  predict.ridgeLinear.Rd  predict.ridgeLogistic.Rd  pvals.Rd  ridge-internal.Rd  ridge-package.Rd  summary.ridgeLinear.Rd  summary.ridgeLogistic.Rd
src/: Makevars  Makevars.win  ReadInData.c  ReadInData.h  commonFunctions.c  commonFunctions.h  computeLinearRidge.c  computeLinearRidge.h  computePvals.c  computePvals.h  coordinateDescent.c  coordinateDescent.h  depends.h  linear.c  linear.h  linearFunctions.c  linearFunctions.h  logistic.c  logistic.h  logisticFunctions.c  logisticFunctions.h  regression_wrapper_function.c  ridgeRegressionFunctions.c  ridgeRegressionFunctions.h  thin.c  thin.h
tests/testthat/: test.R
